# latexcrop

./: .gitignore  README.md  Taskfile.yml  lefthook.yml  mise.toml  package-lock.json  pyproject.toml
cli/: compile.py  extract.py
cli/tex/: .gitignore
src/application/dto/: compile_request.py  crop_request.py  embed_request.py  extract_request.py  extract_result.py  pipeline_request.py  process_result.py  transparency_request.py
src/application/usecases/: embed_tex_usecase.py  extract_tex_usecase.py  generate_pdf_usecase.py  make_transparent_usecase.py  process_pdf_pipeline_usecase.py  trim_pdf_usecase.py
src/domain/models/: embedded_file.py  latexmkrc_source.py  pdf_document.py  tex_document.py
src/domain/services/: latex_compile_service.py  pdf_crop_service.py  pdf_embed_service.py  pdf_extract_service.py  pdf_transparency_service.py
src/infrastructure/services/: services_implementations.py
src/latexcrop/: __init__.py
src/presentation/: .gitignore  main.py  rxconfig.py
tests/usecases/: test_embed_tex_usecase.py  test_generate_pdf_usecase.py  test_trim_pdf_usecase.py
